--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "vue": "^2.5.17",
-    "vue-router": "^3.0.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
     "bootstrap-vue": "^2.0.0-rc.11",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "vue": "^2.5.17",
+    "vue-router": "^3.0.1",
+    "vue2-google-maps": "^0.10.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.1.0",
