--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -2,16 +2,6 @@ spring:
   application:
     name: lottoApi
   datasource:
-    url: jdbc:h2:~/lotto
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
-  jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-
-logging:
-  level:
-    root: debug
-    com.donggoos: debug
+    url: jdbc:h2:file:~/test
 server:
   port: 8888
